fixed navbar z-index problem

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -37,7 +37,7 @@ input[type="button"].button-primary:focus{
   width: 100%;
   height: 6.5rem;
   background: #ffa07a;
-  z-index: 99;
+  z-index: 1;
 }
 
 .navbar-item{
@@ -48,7 +48,6 @@ input[type="button"].button-primary:focus{
   border-bottom: 1px solid #e79b7b;
   float: right;
   background: #ffa07a;
-  z-index: -100;
 }
 
 .navbar-list{
@@ -56,23 +55,24 @@ input[type="button"].button-primary:focus{
 }
 
 .mobile-navbar-list{
-  z-index: -100;
-  position: relative;
-  margin-top: -13.5em;
+  position: fixed;
+  top: -9em;
+  left: 0px;
   width: 100%;
-  transition: margin-top .5s;
+  transition: top .5s;
+  z-index: -1;
 }
 
 .mobile-navbar-list.down {
-  z-index: -100;
-  position: relative;
-  margin-top: 0em;
+  position: fixed;
+  top: 4.36em;
+  left: 0px;
   width: 100%;
-  transition: margin-top .5s;
+  transition: top .5s;
+  z-index: -1;
 }
 
 .navbar-link{
-  z-index: -100;
   margin-left: 55px;
   text-decoration: none;
   line-height: 6.5rem;
@@ -104,7 +104,7 @@ input[type="button"].button-primary:focus{
     width: 100%;
     height: 6.5rem;
     background: #ffa07a;
-    z-index: 99;
+    z-index: 1;
   }
 
   .navbar-list{
@@ -135,12 +135,12 @@ input[type="button"].button-primary:focus{
   text-decoration: none;
   color: #FFF;
   background: #ffa07a;
-  z-index: 100;
+  z-index: 1;
   display: inline;
 }
 
 #logo-col{
-  z-index: 100;
+  z-index: 1;
   background: #ffa07a;
   margin-top: -0.5rem;
 }
@@ -149,7 +149,7 @@ input[type="button"].button-primary:focus{
   text-decoration: none;
   color: #FFF;
   line-height: .9em;
-  z-index: 100;
+  z-index: 1;
   display: inline-block;
 }
 
